# MiniFileExplorer

./: CMakeLists.txt  README.md  build.sh  build_clean.sh  project.txt  to_do_list.txt
src/: CMakeLists.txt  main.cpp  status.hpp
src/CommandParser/: CMakeLists.txt
src/CommandParser/include/: CommandParser.h
src/Controller/: CMakeLists.txt
src/Controller/include/: Controller.h
src/Controller/src/: Controller.cpp
src/FileManager/: CMakeLists.txt
src/FileManager/doc/: return.md
src/FileManager/include/: FileManager.h
src/FileManager/src/: FileManager.cpp
src/Models/include/: models.h  status.h
src/Models/src/: status.cpp
src/models/: CMakeLists.txt
src/models/include/: models.h
src/models/src/: status.cpp
tests/: CMakeLists.txt  subcommand_reproduce.cpp
